2002-07-29  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_focus): make sure embedded object
	widget is non NULL

2002-07-26  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (handle_object_data): don't clear class data here
	as it could break hash foreach loop
	(clear_data): clear them later here

2002-07-25  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (next_prev_cursor_object): use html_cursor_init
	(copy_data): duplicate the key
	(html_object_set_data): use _full version with g_free
	(copy_data): use _full version with g_free

	* htmlcursor.c (html_cursor_init): new function to initialize all
	cursor fields

	* htmlclueflow.c (layout_line): update height just when really needed

2002-07-24  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c: applied patch from Owen. It fixes bug in
	get_size where points and pixels were switched and provides better
	fallback font

	* gtkhtml.c (insert_tab_or_next_cell): insert 4 &nbsp;'s when no
	TAB available

2002-07-18  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_insert_html_generic): pass the engine.
	(update_embedded_object_parent): remove the condition.

	* htmlembedded.c (html_embedded_class_init): actually attach the
	reparent method.

	* htmlembedded.h: add new reparent method.

	* htmlembedded.c (html_embedded_reparent): add new reparent function.

	* gtkhtml.c (gtk_html_insert_html_generic): reparent the embedded
	objects (this is not yet a complete fix).
	(gtk_html_modify_indent_by_delta): make this static.

2002-07-15  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-clueflowstyle.c (set_props): fix a size problem.

2002-07-18  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_set_title): emit TITLE_CHANGED
	signal

2002-07-17  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (get_tags): optimized output

2002-07-15  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (layout_line): fix new line condition

2002-07-12  Radek Doulik  <rodo@ximian.com>
