@@ -1,3 +1,8 @@
+2002-07-30  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit-cut-and-paste.c (use_pictograms): don't put
+	pictograms in the middle of words
+
 2002-07-29  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine.c (html_engine_focus): make sure embedded object
